# lovable-crm

./: .env.example  .gitignore  BACKUP_SYSTEM.md  DEPLOYMENT_STEPS.md  FRONTEND_NEXT_STEPS.md  GETTING_STARTED.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEW_BADGE_FEATURE.md  PAYMENT_LINK_GUIDE.md  PREVIEW_EXPIRY_SYSTEM.md  PROJECT_COMPLETED.txt  README.md  STARTUP.md  STARTUP_FIXES_APPLIED.md  SYSTEM_STATUS.md  VERIFICATION_REPORT.md  WORKFLOW.md  backup.sh  start-all.sh  start-backend.sh
backend/: pyproject.toml  start-backend.sh
backend/app/: config.py  database.py  dependencies.py  main.py  seed.py
backend/app/models/: __init__.py  deal.py  lead.py  lead_import_run.py  lovable_preview.py  message_template.py  outbound_message.py  pipeline_event.py  settings.py  task.py  user.py
backend/app/routers/: auth.py  backups.py  dashboard.py  deals.py  jobs.py  leads.py  messages.py  payments.py  previews.py  settings.py  tasks.py  templates.py
backend/app/schemas/: auth.py  dashboard.py  deal.py  job.py  lead.py  message.py  preview.py  settings.py  task.py  template.py
backend/app/services/: auth_service.py  email_discovery.py  email_service.py  google_places.py  instagram_scraper.py  instagram_scraper_persistent.py  instagram_search.py  instagram_session_manager.py  instagram_validator.py  lead_service.py  settings_service.py
backend/app/workers/: backup.py  daily_import.py  email_discovery.py  followup_scheduler.py  instagram_auto_search.py  scheduler.py  (+1 more)
backend/migrations/: add_archived_at_to_previews.sql  add_status_changed_at_to_leads.sql
(+82 files in other folders)
